tests/fsharp/typecheck/sigs/neg35.bsl

neg35.fs(4,10,4,13): parse error FS1208: Invalid operator definition. Prefix operator definitions must use a valid prefix operator name.

neg35.fs(5,10,5,13): parse error FS1208: Invalid operator definition. Prefix operator definitions must use a valid prefix operator name.

neg35.fs(6,10,6,12): parse error FS1208: Invalid operator definition. Prefix operator definitions must use a valid prefix operator name.

neg35.fs(7,10,7,17): parse error FS1208: Invalid operator definition. Prefix operator definitions must use a valid prefix operator name.

neg35.fs(9,27,9,28): parse error FS1208: Invalid prefix operator

neg35.fs(10,27,10,28): parse error FS1208: Invalid prefix operator

neg35.fs(11,25,11,26): parse error FS1208: Invalid prefix operator

neg35.fs(12,25,12,26): parse error FS1208: Invalid prefix operator
